# NoMoney

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/: Cargo.toml
api/.sqlx/: query-3eefcd0743b0448669db7676a2c9cee0b4e29027ad8fa72d7df5d592bcb13109.json  query-5629ded8c9b31b8189c0859bcd68e66663cca6110ee747e4b4f4329ecc723b5e.json  query-57c2b05690fecff88977bc7a0c91de36eb450467ad70c2e2af4e72c073f0c9c5.json  query-678cd46672cbf9ef0c847b4dd7c6aa1c20da8e341deff4879d225b61888d2bc3.json  query-71acefecf6cee70036f2e7e944f1b1dfd63716d9549d13f76f7446ac379e959a.json  query-a49daa00d716e67b33f3c393da11e98db1e659b486a831fd4b3d41bae88c042d.json  query-af9382495fd8dd6a76ef75003c6bd61cdaf4e39b36cdbaa2c5f3e156d071cf04.json  query-fd842f478b2c9c4233ac34917b083e6682726c2bc17e8c967901744d7adcc0f8.json
api/config/: app.env  app.env.example
api/migrations/: 20240502085517_setup.down.sql  20240502085517_setup.up.sql  20240502085627_add_base_tables.down.sql  20240502085627_add_base_tables.up.sql
api/nomoney/cmd/: Cargo.toml
api/nomoney/cmd/src/: lib.rs
api/nomoney/cmd/src/cli/: server.rs
api/nomoney/commons/: Cargo.toml
api/nomoney/commons/src/: lib.rs
api/nomoney/commons/src/config/: config.rs  mod.rs  types.rs
api/nomoney/commons/src/logger/: logger.rs  mod.rs
api/src/: lib.rs
api/src/common/: mod.rs
api/src/common/caches/: mod.rs  redis.rs  types.rs
api/src/common/configs/: config.rs  mod.rs  types.rs
api/src/common/databases/: mod.rs  postgres.rs  types.rs
api/src/common/loggers/: logger.rs  mod.rs  types.rs
api/src/services/: mod.rs
api/src/services/auth/: helpers.rs  mod.rs  models.rs  repositories.rs  routes.rs  types.rs
api/src/services/families/: mocks.rs  mod.rs  routes.rs  types.rs
api/src/services/profiles/: mod.rs  models.rs  repositories.rs  routes.rs
api/src/services/users/: mod.rs
api/src/utils/errors/: error.rs  mod.rs  types.rs
api/src/utils/responses/: mod.rs  response.rs  types.rs
config/: app.env.example
migrations/2024-04-09-154143_create_families/: down.sql  up.sql
migrations/2024-04-09-154143_create_family/: down.sql  up.sql
migrations/2024-04-11-070401_create_table_families/: down.sql  up.sql
migrations/2024-04-11-083139_create_table_roles/: down.sql  up.sql
migrations/2024-04-11-092456_create_table_users/: up.sql
src/: database.rs  errors.rs  lib.rs  logging.rs  main.rs  models.rs  redis.rs  repositories.rs  schema.rs
src/app/: mod.rs  response.rs  utils.rs
src/app/auth/: mod.rs  models.rs  repositories.rs  routes.rs
src/app/families/: mod.rs  models.rs  repositories.rs  routes.rs
src/app/permissions/: mod.rs  models.rs
src/app/roles/: mod.rs  models.rs  repositories.rs  routes.rs
src/app/users/: mod.rs  models.rs  repositories.rs  routes.rs
src/cmd/: mod.rs  server.rs
src/routes/: family.rs  mod.rs
tests/: families.rs  roles.rs  users.rs
tests/setup/: auth.rs  families.rs  mod.rs  users.rs
webui/: .env  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webui/src/: App.css  App.tsx  index.css  main.tsx  types.ts
webui/src/pages/: Dashboard.tsx  Login.tsx
webui/src/providers/: apps.tsx  themes.tsx
webui/src/routes/: Private.tsx  Public.tsx
