[package]
name = "nomoney"
default-run = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
tokio = { version = "1.37", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
actix-web = "4.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }