[package]
name = "nomoney"
default-run = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.5"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
uuid = { version = "1", features = ["v4", "serde"] }
derive_more = { version = "0.99" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
