[package]
name = "nomoney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15" }
clap = "4.5"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.5"
actix-cors = "0.7"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["chrono", "uuid", "postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = "2.1"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
derive_more = { version = "0.99" }
argon2 = "0.5"
rand = "0.8"
mobc = { version = "0.8" }
mobc-redis = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }