[package]
name = "nomoney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["default", "fmt", "std", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "uuid"] }
bb8 = { version = "0.8" }
bb8-redis = { version = "0.15" }
argon2 = "0.5"
rand = "0.8"