[package]
name = "cmd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5" }
tokio = { version = "1.37", features = ["full"] }
anyhow = { version = "1" }
axum = { version = "0.7", features = ["http2", "tracing"]}
tower-http = { version = "0.5", features = ["normalize-path", "timeout"] }
tower-layer = { version = "0.3" }

### application module
app_commons = { version = "0.1.0", package = "commons", path = "../commons" }